More optimal structure of Less files

--- a/app/templates/_main.less
+++ b/app/templates/_main.less
@@ -1,4 +1,8 @@
 // import basic most wanted less functions
+@import "reset.less";
 @import "functions.less";
 
 // Here is your code
+.<%= _.slugify(projectName) %> {
+	
+}
