--- a/app/templates/_master.html
+++ b/app/templates/_master.html
@@ -22,7 +22,7 @@
 					Brahma(function() {
 						// Here code
 						
-					},["temaplte/js/main.js"])
+					},["template/js/main.js"])
 				});
 				
 				// Require css
